# yolo-v1

./: .gitignore  pyproject.toml
examples/: pascal_voc.sh
notebooks/: COS429_Data_Augmentation.ipynb  cos429_yolo_12.py  vlm_baseline.py  vlm_yolo.ipynb
notebooks/data/: VLM vs YOLOv12.csv  calorie_estimates_lookup.csv  calorie_estimates_no_lookup.csv
scripts/: train_yolo.sh
tests/: test_utils.py
yolo-v1/utils/: data_generate.py  data_retrieval.py
yolo_v1/config/: yolo_trainer.yaml
yolo_v1/dataset/: dataset.py
yolo_v1/loss/: loss.py
yolo_v1/models/: model.py
yolo_v1/trainer/: trainer.py
yolo_v1/utils/: data_preprocess.py  data_retrieval.py  utils.py
